[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
solana-client = "3.1.8"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
tokio = {version = "1.49.0", features = ["full"]}
